# editorconfig-lint

./: .cspell.json  Cargo.toml  README.md
.github/workflows/: check.yaml
src/: check.rs  config.rs  lib.rs  main.rs  reader.rs
